penambahan lagi bagian body

--- a/belajargit/index.html
+++ b/belajargit/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>belajar git</h1>
     <p>belajar git itu menyenangkan!</p>
+    <p>belajar git itu menyenangkan gays!</p>
 </body>
 </html>
